#9 WIP Laser - Changed super science options to be gated behind allowSuperScienceCustomLasers instead of the specific super science check box on the sheet

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -227,7 +227,7 @@
                     </select>
                 </div>
 
-                {{#if data.data.laserDesign.superScience}}
+                {{#if data.data.laserDesign.allowSuperScienceCustomLasers}}
                 <div>
                     <label>
                         Super Science
@@ -258,7 +258,7 @@
                         <option value="F">F cell</option>
                         {{/select}}
                     </select>
-                    {{#if data.data.laserDesign.superScience}}
+                    {{#if data.data.laserDesign.allowSuperScienceCustomLasers}}
                     <div>
                         <label>
                             Super Science Power Cell
