#9 WIP Laser - Added Field Jacket as an option

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -234,6 +234,12 @@
                     </label>
                     <input type="checkbox" name="data.laserDesign.superScience" {{checked data.data.laserDesign.superScience}} data-dtype="Boolean"/>
                 </div>
+                <div>
+                    <label>
+                        Field Jacketed
+                    </label>
+                    <input type="checkbox" name="data.laserDesign.fieldJacketed" {{checked data.data.laserDesign.fieldJacketed}} data-dtype="Boolean"/>
+                </div>
                 {{/if}}
 
                 <div>
