--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -332,8 +332,9 @@
                         <td>Rcl</td>
                         <td>Cost</td>
                         <td>LC</td>
+                        <td>Malf</td>
                     </tr>
-                    <tr>
+                    <tr class="custom-laser-air">
                         <td>{{data.data.tl}}</td>
                         <td>{{item.name}} - Air</td>
                         <td>{{data.data.laserDesign.outputDamage}}</td>
@@ -347,8 +348,9 @@
                         <td>{{data.data.laserDesign.outputRcl}}</td>
                         <td>{{data.data.cost}}</td>
                         <td>{{data.data.lc}}</td>
+                        <td>17+</td>
                     </tr>
-                    <tr>
+                    <tr class="custom-laser-space">
                         <td>{{data.data.tl}}</td>
                         <td>{{item.name}} - Space</td>
                         <td>{{data.data.laserDesign.outputDamageSpace}}</td>
@@ -362,8 +364,9 @@
                         <td>{{data.data.laserDesign.outputRcl}}</td>
                         <td>{{data.data.cost}}</td>
                         <td>{{data.data.lc}}</td>
+                        <td>17+</td>
                     </tr>
-                    <tr>
+                    <tr class="custom-laser-water">
                         <td>{{data.data.tl}}</td>
                         <td>{{item.name}} - Underwater</td>
                         <td>{{data.data.laserDesign.outputDamageWater}}</td>
@@ -377,7 +380,58 @@
                         <td>{{data.data.laserDesign.outputRcl}}</td>
                         <td>{{data.data.cost}}</td>
                         <td>{{data.data.lc}}</td>
+                        <td>17+</td>
                     </tr>
+                    {{#if data.data.laserDesign.hotshotsAndOverheating}}
+                    <tr class="custom-laser-air-hotshot">
+                        <td>{{data.data.tl}}</td>
+                        <td>{{item.name}} - Hotshot Air</td>
+                        <td>{{data.data.laserDesign.outputDamageHotshots}}</td>
+                        <td>{{data.data.laserDesign.outputAcc}}</td>
+                        <td>{{data.data.laserDesign.outputRange}}</td>
+                        <td>{{data.data.laserDesign.outputWeight}}</td>
+                        <td>{{data.data.laserDesign.outputRoF}}</td>
+                        <td>{{data.data.laserDesign.outputShotsHotshots}}</td>
+                        <td>{{data.data.laserDesign.outputST}}</td>
+                        <td>{{data.data.laserDesign.outputBulk}}</td>
+                        <td>{{data.data.laserDesign.outputRcl}}</td>
+                        <td>{{data.data.cost}}</td>
+                        <td>{{data.data.lc}}</td>
+                        <td>14</td>
+                    </tr>
+                    <tr class="custom-laser-space-hotshot">
+                        <td>{{data.data.tl}}</td>
+                        <td>{{item.name}} - Hotshot Space</td>
+                        <td>{{data.data.laserDesign.outputDamageHotshotsSpace}}</td>
+                        <td>{{data.data.laserDesign.outputAccSpace}}</td>
+                        <td>{{data.data.laserDesign.outputRangeSpace}}</td>
+                        <td>{{data.data.laserDesign.outputWeight}}</td>
+                        <td>{{data.data.laserDesign.outputRoF}}</td>
+                        <td>{{data.data.laserDesign.outputShotsHotshots}}</td>
+                        <td>{{data.data.laserDesign.outputST}}</td>
+                        <td>{{data.data.laserDesign.outputBulk}}</td>
+                        <td>{{data.data.laserDesign.outputRcl}}</td>
+                        <td>{{data.data.cost}}</td>
+                        <td>{{data.data.lc}}</td>
+                        <td>14</td>
+                    </tr>
+                    <tr class="custom-laser-water-hotshot">
+                        <td>{{data.data.tl}}</td>
+                        <td>{{item.name}} - Hotshot Underwater</td>
+                        <td>{{data.data.laserDesign.outputDamageHotshotsWater}}</td>
+                        <td>{{data.data.laserDesign.outputAccWater}}</td>
+                        <td>{{data.data.laserDesign.outputRangeWater}}</td>
+                        <td>{{data.data.laserDesign.outputWeight}}</td>
+                        <td>{{data.data.laserDesign.outputRoF}}</td>
+                        <td>{{data.data.laserDesign.outputShotsHotshots}}</td>
+                        <td>{{data.data.laserDesign.outputST}}</td>
+                        <td>{{data.data.laserDesign.outputBulk}}</td>
+                        <td>{{data.data.laserDesign.outputRcl}}</td>
+                        <td>{{data.data.cost}}</td>
+                        <td>{{data.data.lc}}</td>
+                        <td>14</td>
+                    </tr>
+                    {{/if}}
                 </table>
             </div>
         </div>
