#9 WIP Laser - Updated laser design styling

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1775,3 +1775,7 @@ attribute-senses {
 	background-color: rgb(0 11 225 / 7.5%) !important;
 	font-style: italic;
 }
+
+.laser-design-block {
+	display: flex;
+}
