#9 WIP Laser - Initial commit of "What The Fuck Is This Shit"

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -105,7 +105,7 @@
                     <div style="width: 50%;">
                         <h2 class="bold" style="text-align: center;">Laser Options</h2>
                         <table>
-                            <tr>
+                            <tr class="laser-design-row" id="laser-configuration">
                                 <td style="width: 150px">
                                     Configuration
                                 </td>
@@ -119,9 +119,14 @@
                                         {{/select}}
                                     </select>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
 
-                            <tr>
+                            <tr class="laser-design-row" id="beam-type">
                                 <td>
                                     Beam Type
                                 </td>
@@ -183,10 +188,15 @@
                                         {{/select}}
                                     </select>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
 
                             {{#if (eq data.data.laserDesign.beamType "laser")}}
-                            <tr>
+                            <tr class="laser-design-row" id="laser-colour">
                                 <td>
                                     Laser Colour
                                 </td>
@@ -199,36 +209,51 @@
                                     {{/select}}
                                 </select>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                             {{/if}}
 
                             {{#if (eq data.data.laserDesign.beamType "blaster")}}
-                            <tr>
+                            <tr class="laser-design-row" id="omni-blaster">
                                 <td>
                                     Omni-Blaster
                                 </td>
                                 <td>
                                     <input type="checkbox" name="data.laserDesign.omniBlaster" {{checked data.data.laserDesign.omniBlaster}} data-dtype="Boolean"/>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                             {{/if}}
 
-                            <tr>
+                            <tr class="laser-design-row" id="focal-array">
                                 <td style="line-height: 27.5px">
                                     Focal Array
                                 </td>
                                 <td style="line-height: 27.5px">
                                     {{data.data.laserDesign.focalArraySize}} : x{{data.data.laserDesign.focalArray}}
                                 </td>
-                            </tr>
-
-                            <tr>
-                                <td colspan="2">
-                                    <input type="range" min="0.1" max="4" step="0.05" name="data.laserDesign.focalArray" value="{{data.data.laserDesign.focalArray}}" data-dtype="Number">
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
                                 </td>
                             </tr>
 
                             <tr>
+                                <td colspan="3">
+                                    <input type="range" min="0.1" max="4" step="0.05" name="data.laserDesign.focalArray" value="{{data.data.laserDesign.focalArray}}" data-dtype="Number">
+                                </td>
+                            </tr>
+
+                            <tr class="laser-design-row" id="laser-generator">
                                 <td>
                                     Generator
                                 </td>
@@ -246,29 +271,44 @@
                                     {{/select}}
                                 </select>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                         </table>
                         {{#if data.data.laserDesign.allowSuperScienceCustomLasers}}
                         <h2 class="bold" style="text-align: center; margin-top: 20px">Super Science Options</h2>
                         <table>
-                        <tr>
+                        <tr class="laser-design-row" id="super-science-laser">
                             <td style="line-height: 27.5px">
                                 Super Science Laser Upgrade
                             </td>
                             <td style="line-height: 27.5px">
                                 <input type="checkbox" name="data.laserDesign.superScience" {{checked data.data.laserDesign.superScience}} data-dtype="Boolean"/>
                             </td>
+                            <td class="question-container">
+                                <div class="question-button">
+                                    <i class="fas fa-question"></i>
+                                </div>
+                            </td>
                         </tr>
                         {{#ifCond  data.data.tl '>=' 10 }}
-                        <tr>
+                        <tr class="laser-design-row" id="field-jacket">
                             <td style="line-height: 27.5px">
                                 Field Jacketed (TL 10^)
                             </td>
                             <td style="line-height: 27.5px">
                                 <input type="checkbox" name="data.laserDesign.fieldJacketed" {{checked data.data.laserDesign.fieldJacketed}} data-dtype="Boolean"/>
                             </td>
+                            <td class="question-container">
+                                <div class="question-button">
+                                    <i class="fas fa-question"></i>
+                                </div>
+                            </td>
                         </tr>
-                        <tr>
+                        <tr class="laser-design-row" id="gravitic focusing">
                             <td style="line-height: 27.5px">
                                 Gravitic Focusing (TL 10^)
                             </td>
@@ -286,15 +326,25 @@
                                     {{/select}}
                                 </select>
                             </td>
+                            <td class="question-container">
+                                <div class="question-button">
+                                    <i class="fas fa-question"></i>
+                                </div>
+                            </td>
                         </tr>
                         {{/ifCond}}
                         {{#ifCond  data.data.tl '>=' 11 }}
-                        <tr>
+                        <tr class="laser-design-row" id="ftl-laser">
                             <td style="line-height: 27.5px">
                                 FTL (TL 11^)
                             </td>
                             <td style="line-height: 27.5px">
                                 <input type="checkbox" name="data.laserDesign.ftl" {{checked data.data.laserDesign.ftl}} data-dtype="Boolean"/>
+                            </td>
+                            <td class="question-container">
+                                <div class="question-button">
+                                    <i class="fas fa-question"></i>
+                                </div>
                             </td>
                         </tr>
                         {{/ifCond}}
@@ -302,16 +352,21 @@
                         {{/if}}
                         <h2 class="bold" style="text-align: center; margin-top: 20px">Damage and Power</h2>
                         <table>
-                            <tr>
+                            <tr class="laser-design-row" id="laser-damage-dice">
                                 <td style="line-height: 27.5px">
                                     Damage Dice
                                 </td>
                                 <td style="line-height: 27.5px">
                                     <input type="number" name="data.laserDesign.damageDiceInput" value="{{data.data.laserDesign.damageDiceInput}}" data-dtype="Number"/>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
 
-                            <tr>
+                            <tr class="laser-design-row" id="laser-power-system">
                                 <td style="line-height: 27.5px">
                                     Power System:
                                 </td>
@@ -328,41 +383,61 @@
                                         {{/select}}
                                     </select>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                             {{#if data.data.laserDesign.allowSuperScienceCustomLasers}}
-                            <tr>
+                            <tr class="laser-design-row" id="super-science-power-cells">
                                 <td style="line-height: 27.5px">
                                     Super Science Power Cells
                                 </td>
                                 <td style="line-height: 27.5px">
                                     <input type="checkbox" name="data.laserDesign.superScienceCells" {{checked data.data.laserDesign.superScienceCells}} data-dtype="Boolean"/>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                             {{/if}}
-                            <tr>
+                            <tr class="laser-design-row" id="non-rechargeable-power-cells">
                                 <td style="line-height: 27.5px">
                                     Non-Rechargeable Power Cells
                                 </td>
                                 <td style="line-height: 27.5px">
                                 <input type="checkbox" name="data.laserDesign.nonRechargeableCells" {{checked data.data.laserDesign.nonRechargeableCells}} data-dtype="Boolean"/>
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                         </table>
                         <h2 class="bold" style="text-align: center; margin-top: 20px">Tweaks</h2>
                         <table>
-                            <tr>
+                            <tr class="laser-design-row" id="laser-weight-tweak">
                                 <td style="line-height: 27.5px">
                                     Tweak Weight x{{data.data.laserDesign.weightTweak}}
                                 </td>
                                 <td>
                                     <input type="range" min="0.85" max="2" step="0.05" name="data.laserDesign.weightTweak" value="{{data.data.laserDesign.weightTweak}}" data-dtype="Number">
                                 </td>
+                                <td class="question-container">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
                             </tr>
                         </table>
                     </div>
                     <div style="width: 50%;">
                         <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
-
+                        <div>{{{data.data.laserDesign.info}}}</div>
                     </div>
                 </div>
                 <table>
