--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1779,3 +1779,18 @@ attribute-senses {
 .laser-design-block {
 	display: flex;
 }
+
+.question-container {
+	height: 27.5px;
+	width: 27.5px;
+	text-align: center;
+}
+
+.question-button {
+	height: 27.5px;
+	width: 27.5px;
+	text-align: center;
+	line-height: 27.5px;
+	border: black 1px solid;
+	border-radius: 5px;
+}
