--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -308,7 +308,7 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr class="laser-design-row" id="gravitic focusing">
+                        <tr class="laser-design-row" id="gravitic-focusing">
                             <td style="line-height: 27.5px">
                                 Gravitic Focusing (TL 10^)
                             </td>
