--- a/gurps4e.css
+++ b/gurps4e.css
@@ -1794,3 +1794,8 @@ attribute-senses {
 	border: black 1px solid;
 	border-radius: 5px;
 }
+
+.equipment-info-container {
+	position: sticky;
+	top: 20px;
+}
