--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -468,7 +468,7 @@
                     </div>
                     <div style="width: 50%;">
                         <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
-                        <div>{{{data.data.laserDesign.info}}}</div>
+                        <div class="equipment-info-container">{{{data.data.laserDesign.info}}}</div>
                     </div>
                 </div>
                 <table>
