#9 WIP Laser - Corrected issue where the pulseBeamLaser checkbox was referencing the pulseLaser bool

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -454,7 +454,7 @@
                                     Pulse-Beam Laser
                                 </td>
                                 <td>
-                                    <input type="checkbox" name="data.laserDesign.pulseLaser" {{checked data.data.laserDesign.pulseBeamLaser}} data-dtype="Boolean"/>
+                                    <input type="checkbox" name="data.laserDesign.pulseBeamLaser" {{checked data.data.laserDesign.pulseBeamLaser}} data-dtype="Boolean"/>
                                 </td>
                                 <td class="question-container" id="pulse-beam-laser">
                                     <div class="question-button">
